# blob-store

./: .gitignore  CMakeLists.txt  README-PL.md  README.md  build.Dockerfile  dev.sh
k8s/: frontend.yaml  master.yaml  worker.yaml
protos/: CMakeLists.txt  common.proto
protos/services/: echo_service.proto  frontend_service.proto  master_service.proto  worker_service.proto
src/client/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  blob_file.hpp  blob_hasher.hpp  config.hpp  environment.hpp  expected.hpp  ip_utils.hpp  logging.hpp  network_utils.hpp
src/frontend/: CMakeLists.txt  frontend_service.cpp  frontend_service.hpp  main.cpp  utils.hpp
src/master/: CMakeLists.txt  echo_service.hpp  main.cpp  master_db_example.cpp  master_db_repository.cpp  master_db_repository.hpp  master_service.cpp  master_service.hpp  master_service_mock.hpp
src/worker/: CMakeLists.txt  main.cpp  worker_service.cpp  worker_service.hpp
tests/: CMakeLists.txt
tests/master/: echo_tests.cpp
tests/worker/: worker_tests.cpp
